Fixed z-index bug

--- a/www/css/style-zero.mac.css
+++ b/www/css/style-zero.mac.css
@@ -4244,10 +4244,12 @@ a.comment-child-link::before {
 	text-align: right;
 	margin: 0 8px 8px 16px;
 	position: relative;
-	z-index: 9999;
 	-webkit-user-select: none;
 	-moz-user-select: none;
 	user-select: none;
+}
+.comment-controls:focus-within {
+	z-index: 9999;
 }
 .comment-thread .comment-controls + .comment-thread > li:first-child {
 	margin-top: 8px;
@@ -4310,6 +4312,7 @@ a.comment-child-link::before {
 
 .edit-post-link {
 	display: inline-block;
+	margin-bottom: 0.25em;
 	font-size: 1.125rem;
 }
 .edit-post-link::before {
@@ -4652,14 +4655,10 @@ button.guiedit {
 
 .post-controls {
 	text-align: right;
+	margin: 0.75em var(--GW-post-page-content-right-side-padding) 0 0;
 	grid-row: 3;
 	align-self: start;
 	justify-self: end;
-}
-.post-controls .edit-post-link {
-	font-size: 1.375em;
-	white-space: nowrap;
-	padding: 0.375em 1em 0 0.375em;
 }
 
 #edit-post-form {
@@ -4807,6 +4806,9 @@ button.guiedit {
 	}
 }
 @media only screen and (max-width: 520px) {
+	.post-controls {
+		margin: 0.5em var(--GW-post-page-content-right-side-padding) 0 0;
+	}
 	#edit-post-form .post-meta-fields {
 		grid-template-columns: 4.5em auto auto auto 1fr auto;
 	}
